--- a/views/staff.ejs
+++ b/views/staff.ejs
@@ -51,7 +51,7 @@
                         <td>
                             <% if (staff) { %>
                                 <% let post = '' %>
-                                <% if (staff.position == 'other') { %>
+                                <% if (staff.position == 'Other' || staff.position == 'Select-option') { %>
                                     <% post = staff.other_position %>
                                 <% } else if (staff.other_position == '') { %>
                                     <% post = staff.position %>
