--- a/views/index.ejs
+++ b/views/index.ejs
@@ -179,7 +179,7 @@
 
               <div class="col-md-6 col-lg-5">
               
-                <img src="/img/business-hands-joined-together-teamwork.jpg" alt="" class="img-fluid">
+                <img src="/img/Our_role.jpg" alt="" class="img-fluid">
                   
               </div>
              
