--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 <div class="headings">
 
     <div class="imging">
-        <img src="/img/Valiant_01.png" alt="" srcset="" width="100">
+        <img src="/img/Valiant-01.png" alt="" srcset="" width="100">
     </div>
   
     <div class="flex-display">
