--- a/views/recover_password.ejs
+++ b/views/recover_password.ejs
@@ -33,9 +33,9 @@
                             
                             <div class="form-group">
                                 <label for="newPassword">Enter new Password</label>
-                                <input class="form-control" type="newPassword" name="newPassword" value="<%= typeof newPassword != 'undefined' ? newPassword : '' %>" id="password_two">
+                                <input class="form-control" type="password" name="newPassword" value="<%= typeof newPassword != 'undefined' ? newPassword : '' %>" id="password_two">
                             </div>
-                            <div class="forget_pass"><a href="/admin/login">Back to Login</a> </div>
+                            <div class="forget_pass"><a href="/admin/login">Back to Login</a> <i class="fas fa-eye-slash fa-eye" onclick="myFunction()"></i> </div>
                             <div class="form-group">
                                 <input  type="submit" value="Change">
                             </div>
@@ -58,4 +58,41 @@
     .all_messagesing {
         top: 50%;
     }
+
+    .forget_pass {
+        display: flex;
+        flex-direction: row;
+        gap: 200px;
+    }
+
+    .forget_pass a, .forget_pass i {
+        color: var(--orange1);
+    }
 </style>
+
+<script>
+    // Assuming eyeClosed and eyeOpened are arrays of elements
+ let eyeClosed = document.getElementsByClassName('fas');
+ let eyeOpened = document.getElementsByClassName('fa-eye-slash');
+ 
+ // Adding a click event listener to each element in the collection
+ for (let i = 0; i < eyeClosed.length; i++) {
+     eyeClosed[i].addEventListener('click', function() {
+         // Toggle between 'fa-eye' and 'fa-eye-slash'
+         // this.classList.toggle('fa-eye');
+         this.classList.toggle('fa-eye-slash');
+     });
+ }
+ 
+ </script>
+ 
+ <script>
+     function myFunction() {
+     var x = document.getElementById("password_two");
+     if (x.type === "password") {
+       x.type = "text";
+     } else {
+       x.type = "password";
+     }
+   }
+   </script>
