--- a/views/agents-grid.ejs
+++ b/views/agents-grid.ejs
@@ -56,7 +56,15 @@
                   </p>
                   <div class="info-agents color-a">
                     <p>
-                      <strong>Role: </strong> <%= staff.position %>
+                      <strong>Role: </strong> <% if (staff) { %>
+                        <% let post = '' %>
+                        <% if (staff.position == 'Other' || staff.position == 'Select-option') { %>
+                            <% post = staff.other_position %>
+                        <% } else if (staff.other_position == '') { %>
+                            <% post = staff.position %>
+                        <% } %>
+                        <%= post %>
+                    <% } %>
                     </p>
                     <p>
                       <strong>Phone: </strong> <%= staff.phone %>
