--- a/views/change_password.ejs
+++ b/views/change_password.ejs
@@ -40,7 +40,8 @@
             
             <div class="form-group">
                 <label for="password">Enter new password</label>
-                <input class="form-control" type="password" name="passwording" value="<%= typeof passwording != 'undefined' ? passwording : '' %>" id="password_two">
+                <input class="form-control" type="password" name="passwording" value="<%= typeof passwording != 'undefined' ? passwording : '' %>" id="password_two" >
+                <i class="fas fa-eye-slash fa-eye" onclick="myFunction()"></i>
             </div>
             <div class="form-group">
                 <input  type="submit" value="Submit">
@@ -54,3 +55,38 @@
     </div>
 </div>
 <%- include ('./dash_include/footer.ejs') %>
+
+<script>
+    // Assuming eyeClosed and eyeOpened are arrays of elements
+ let eyeClosed = document.getElementsByClassName('fas');
+ let eyeOpened = document.getElementsByClassName('fa-eye-slash');
+ 
+ // Adding a click event listener to each element in the collection
+ for (let i = 0; i < eyeClosed.length; i++) {
+     eyeClosed[i].addEventListener('click', function() {
+         // Toggle between 'fa-eye' and 'fa-eye-slash'
+         // this.classList.toggle('fa-eye');
+         this.classList.toggle('fa-eye-slash');
+     });
+ }
+ 
+ </script>
+ 
+ <script>
+     function myFunction() {
+     var x = document.getElementById("password_two");
+     if (x.type === "password") {
+       x.type = "text";
+     } else {
+       x.type = "password";
+     }
+   }
+   </script>
+
+<style>
+   
+
+     i {
+        color: var(--orange1);
+    }
+</style>
