--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,8 +22,9 @@
                     <div class="all_over_the_non"> 
                         <form action="/admin/login" method="post">
                             <input type="email" name="email" id="">
-                            <input type="password" name="password" id="">
-                            <div class="forget_pass"><a href="/admin/forget-password">Forget Password?</a> </div>
+                            <input type="password" name="password" id="pass">
+                           
+                            <div class="forget_pass"><a href="/admin/forget-password">Forget Password?</a> <i class="fas fa-eye-slash fa-eye" onclick="myFunction()"></i></div>
                             <input type="submit" value="Sign In">
                            
                         </form>
@@ -39,8 +40,47 @@
 
 <%- include ('./dash_include/footer.ejs') %>
 
+
+
+<script>
+   // Assuming eyeClosed and eyeOpened are arrays of elements
+let eyeClosed = document.getElementsByClassName('fas');
+let eyeOpened = document.getElementsByClassName('fa-eye-slash');
+
+// Adding a click event listener to each element in the collection
+for (let i = 0; i < eyeClosed.length; i++) {
+    eyeClosed[i].addEventListener('click', function() {
+        // Toggle between 'fa-eye' and 'fa-eye-slash'
+        // this.classList.toggle('fa-eye');
+        this.classList.toggle('fa-eye-slash');
+    });
+}
+
+</script>
+
+<script>
+    function myFunction() {
+    var x = document.getElementById("pass");
+    if (x.type === "password") {
+      x.type = "text";
+    } else {
+      x.type = "password";
+    }
+  }
+  </script>
+
 <style>
     .all_messagesing {
         top: 50%;
+    }
+
+    .forget_pass {
+        display: flex;
+        flex-direction: row;
+        gap: 200px;
+    }
+
+    .forget_pass a, .forget_pass i {
+        color: var(--orange1);
     }
 </style>
