--- a/views/carearFrontPage.ejs
+++ b/views/carearFrontPage.ejs
@@ -40,7 +40,7 @@
           <div class="col-sm-12 position-relative">
             <div class="about-img-box">
              
-              <img src="/img/Career.jpg" alt="" class="img-fluid">
+              <img src="/img/chess.jpg" alt="" class="img-fluid">
             </div>
           </div>
           <div class="col-sm-12 section-t8">
